--- a/src/DoneItem.module.css
+++ b/src/DoneItem.module.css
@@ -1,6 +1,17 @@
 
-p {
+.lineThrough {
     text-decoration: line-through;
+    font-family: roboto;
+    font-weight: 400;
+    font-size: 20px;
+    text-align: left;
+    margin-right: 7px;
+    margin-left: 7px;
+    color: #1b8ef29c;
+    padding-top: 15px;
+}
+
+.noLine {
     font-family: roboto;
     font-weight: 400;
     font-size: 20px;
